--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     </head>
     <body>
         <h1>My Favorite Recipes</h1>
-        <a href="recipes/koreanNoodleSoup.html">KoreanNoodleSoup</a>
-        <a href=""></a>
-        <a href=""></a>
+
+        <a href="recipes/koreanNoodleSoup.html">KoreanNoodleSoup</a><br>
+        <a href="recipes/friedRice.html">Fried rice</a><br>
+        <a href="recipes/frenchFries.html">French Fries</a>
     </body>
 </html>
